# DMC

./: .gitignore  COPYING  INSTALL  Makefile.am  README.md  configure.ac
build-aux/m4/: dynamiccoin_find_bdb48.m4  dynamiccoin_qt.m4  dynamiccoin_subdir_to_include.m4
contrib/: dynamiccoin-qt.pro  dynamiccoind.bash-completion
contrib/bitrpc/: bitrpc.py
contrib/debian/: changelog  control  copyright  dynamiccoin-qt.desktop  dynamiccoin-qt.install  dynamiccoin-qt.lintian-overrides  dynamiccoin-qt.protocol  dynamiccoind.bash-completion  dynamiccoind.examples  dynamiccoind.install  dynamiccoind.lintian-overrides  dynamiccoind.manpages  rules
contrib/debian/manpages/: dynamiccoin-qt.1  dynamiccoin.conf.5  dynamiccoind.1
contrib/gitian-descriptors/: gitian-osx-signer.yml  gitian-osx.yml
contrib/macdeploy/: README.md  background.psd  detached-sig-apply.sh  detached-sig-create.sh  fancy.plist  macdeployqtplus
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  build-osx.md  build-unix.md  dnsseed-policy.md  release-notes.md  unit-tests.md
qa/pull-tester/: rpc-tests.sh  run-dynamiccoin-cli  run-dynamiccoind-for-test.sh.in  tests-config.sh.in
share/: dynamiccoin.conf  setup.nsi.in  ui.rc
share/pixmaps/: dynamiccoin128.xpm  dynamiccoin16.xpm  dynamiccoin256.xpm  dynamiccoin32.xpm  dynamiccoin64.xpm
share/qt/: Info.plist.in  extract_strings_qt.py
share/seeds/: generate-seeds.py  nodes_main.txt  nodes_test.txt
src/: GrsApi.cpp  GrsApi.h  Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  amount.cpp  amount.h  bitcoin-cli.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  clientversion.h  compat.h  dynamiccoin-cli-res.rc  dynamiccoin-cli.cpp  dynamiccoin-tx.cpp  dynamiccoind-res.rc  dynamiccoind.cpp  init.cpp  key.cpp  main.cpp  main.h  merkleblock.cpp  miner.cpp  net.cpp  netbase.cpp  netbase.h  pow.cpp  pow.h  rpcblockchain.cpp  rpcdump.cpp  rpcmining.cpp  rpcmisc.cpp  rpcnet.cpp  rpcprotocol.cpp  rpcrawtransaction.cpp  (+10 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  strnlen.cpp
src/crypto/: common.h
src/curlpp/include/curlpp/: config.h
src/primitives/: block.cpp  block.h
src/qt/: Makefile  addressbookpage.cpp  askpassphrasedialog.cpp  coincontroldialog.cpp  dynamiccoin.cpp  dynamiccoin.qrc  dynamiccoin_locale.qrc  dynamiccoinaddressvalidator.cpp  dynamiccoinamountfield.cpp  dynamiccoingui.cpp  dynamiccoingui.h  dynamiccoinstrings.cpp  dynamiccoinunits.cpp  dynamiccoinunits.h  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  intro.cpp  macnotificationhandler.mm  networkstyle.cpp  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  overviewpage.h  paymentserver.cpp  qvalidatedlineedit.cpp  receivecoinsdialog.cpp  receiverequestdialog.cpp  recentrequeststablemodel.cpp  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsentry.cpp  splashscreen.cpp  transactiondesc.cpp  transactiontablemodel.h  transactionview.cpp  utilitydialog.cpp  walletframe.cpp  (+3 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: dynamiccoin_ach.ts  dynamiccoin_af_ZA.ts  dynamiccoin_ar.ts  dynamiccoin_be_BY.ts  dynamiccoin_bg.ts  dynamiccoin_bs.ts  dynamiccoin_ca.ts  dynamiccoin_ca@valencia.ts  dynamiccoin_ca_ES.ts  dynamiccoin_cmn.ts  dynamiccoin_cs.ts  dynamiccoin_cy.ts  dynamiccoin_da.ts  dynamiccoin_de.ts  dynamiccoin_el_GR.ts  dynamiccoin_en.ts  dynamiccoin_eo.ts  dynamiccoin_es.ts  dynamiccoin_es_CL.ts  dynamiccoin_es_DO.ts  dynamiccoin_es_MX.ts  dynamiccoin_es_UY.ts  dynamiccoin_et.ts  dynamiccoin_eu_ES.ts  dynamiccoin_fa.ts  dynamiccoin_fa_IR.ts  dynamiccoin_fi.ts  dynamiccoin_fr.ts  dynamiccoin_fr_CA.ts  dynamiccoin_gl.ts  dynamiccoin_gu_IN.ts  dynamiccoin_he.ts  dynamiccoin_hi_IN.ts  dynamiccoin_hr.ts  dynamiccoin_hu.ts  dynamiccoin_id_ID.ts  dynamiccoin_it.ts  dynamiccoin_ja.ts  dynamiccoin_ka.ts  dynamiccoin_kk_KZ.ts  (+31 more)
src/qt/res/: dynamiccoin-qt-res.rc
src/qt/res/icons/: dynamiccoin.icns
src/qt/test/: Makefile  test_main.cpp  uritests.cpp
src/script/: bitcoinconsensus.h
src/test/: Makefile  crypto_tests.cpp  dynamiccoin-util-test.py  getarg_tests.cpp  miner_tests.cpp  netbase_tests.cpp  test_dynamiccoin.cpp
src/test/data/: dynamiccoin-util-test.json
